# DarkCastle

./: .gitignore  CMakeLists.txt  Dockerfile  MOBILE.md  OBJECTS.md  README.md  ROOM.md  ZONEFILE.md
doc/: new_character
lib/: leaderboard.txt  mobindex  objectindex  onlinewho.txt  special.txt  whassup.txt  wizlist.txt  worldindex  zoneindex.tiny
lib/mobs/: 03000-3177.mob  03000-3177.mob.last  Origination.mob
lib/objects/: 00000-96.obj.last
lib/world/: 00200-299.txt  03001-3099.txt  Origination.txt
lib/zonefiles/: 00200-299.zon  03099-NSorpigal.zon  Origination.zon
src/: .gitignore  Actions.h  Affect.h  AttackTypes.h  Attributes.h  AuctionBounds.h  BanAction.h  BoardType.h  CVoteData.h  CharacterData.cpp  CharacterData.h  CharacterStructs.h  ClanIds.h  ClanPermissions.h  ClassIds.h  CombatAffects.h  CommandStack.h  ConnectionData.cpp  ConnectionData.h  ContainerStatus.h  Continents.h  DC.cpp  DC.h  Database.cpp  Direction.h  EquipmentLocation.h  ExitInfo.h  GlobalHeader.h  ItemApply.h  ItemExtra.h  ItemMoreFlags.h  ItemType.h  Leaderboard.cpp  LiquidType.h  Makefile  Makefile~Stashed changes  MaxLength.h  Maximums.h  MessageDestination.h  MessageDisplay.h  (+164 more)
src/include/: utility.h  vault.h
src/wizard/: wiz_102.cpp  wizard.h
test/: NumberTypes_h_test.cpp  main_test.cpp  structs_h_test.cpp
test/log/: scons.out  scons10.out  scons15.out  scons20.out  scons25.out  scons30.out  scons40.out  scons5.out  scons55.out
test/logs/: err_char_data.out  error.out  scons10.out  scons20.out  scons30.out
test/src/: NumberTypes_h_test.cpp  main_test.cpp
